--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "M Fikri",
   "license": "ISC",
   "dependencies": {
+    "@nodejscart/mysql-query-builder": "^1.3.4",
     "body-parser": "^1.18.3",
     "date-and-time": "^2.4.1",
     "dotenv": "^16.0.2",
