--- a/example.env
+++ b/example.env
@@ -3,15 +3,15 @@ TZ='Asia/Makassar'
 ENVIRONMENT='development'
 
 # service config
-APP_PORT=3001
+APP_PORT=3000
 
 # db config
 # DB_HOST='172.24.0.2'
-DB_HOST='dbMysql'
+DB_HOST='dbUser'
 DB_PORT='3306'
 DB_USER='admin'
 DB_PASS='admin'
-DB_NAME='auth'
+DB_NAME='user'
 DB_ROOT_PASS='53a8b072abbb3b916e98'
 
 # jwt config
