--- a/example.env
+++ b/example.env
@@ -17,3 +17,5 @@ DB_ROOT_PASS='53a8b072abbb3b916e98'
 # jwt config
 JWT_SECRET_KEY='gfg_jwt_secret_key'
 TOKEN_HEADER_KEY='gfg_token_header_key'
+
+RUNNER='nodemon'
