.ENV services list

--- a/example.env
+++ b/example.env
@@ -19,3 +19,9 @@ JWT_SECRET_KEY='gfg_jwt_secret_key'
 TOKEN_HEADER_KEY='gfg_token_header_key'
 
 RUNNER='nodemon'
+
+# services list :
+AUTH_SERVICES=auth
+USER_SERVICES=user
+SCHEDULE_SERVICES=user
+PRESENCEES_SERVICES=presencees
