add kubernetes manifests

--- a/Dockerfile-compose
+++ b/Dockerfile-compose
@@ -6,6 +6,10 @@ RUN adduser -S app
 COPY . .
 RUN npm install npm@8.19.2 --location=global
 RUN npm install
+# RUN npm install pm2 -g
+RUN npm install nodemon --location=global
 RUN chown -R app /opt/app
 USER app
-CMD [ "node", "index.js"]
+EXPOSE ${EXP_PORT}
+# CMD [ "nodemon", "index.js"]
+# CMD ["pm2-runtime", "index.js"]
